# Voice-Agent-LangChain

./: .env.example  .gitignore  README.md  agent_workflow.py  assembly_stt.py  cartesia_tts.py  events.py  main.py  pyproject.toml  server.py  utils.py
front-react/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
front-react/src/: App.tsx  formatting-utils.ts  index.css  types.ts  websocket.ts
front-react/src/audio/: audioCapture.ts  playback.ts
front-react/src/components/: ActivityFeed.tsx  Console.tsx  Controls.tsx  Header.tsx  LatencyWaterfall.tsx  Pipeline.tsx  PipelineCard.tsx
front-react/src/stores/: activityStore.ts  pipelineStore.ts  sessionStore.ts
