[project]
name = "voice agent"
version = "0.1.0"
description = "voice agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain[google-genai]>=1.3.1",
    "langgraph>=1.2.1",
    "python-dotenv>=1.2.2",
    "langchain-google-genai>=4.2.3",
    "aiohttp>=3.13.5",
    "assemblyai>=0.64.4",
    "fastapi>=0.136.3",
    "websockets>=16.0",
    "uvicorn>=0.48.0",
]
